# sine_wave_ros

./: LICENSE  README.md
.github/workflows/: linting.yml
container/: Dockerfile  devcontainer.json
plot/: plot.py
sine_wave_logs/: sine_wave_data.csv
sine_wave_package/: CMakeLists.txt  package.xml
sine_wave_package/config/: sine_wave_params.yaml
sine_wave_package/include/sine_wave_package/: grayscale_server.hpp  sine_wave_publisher.hpp  sine_wave_subscriber.hpp
sine_wave_package/launch/: convert_to_grayscale.py  sine_wave_launch.py
sine_wave_package/src/: grayscale_client.cpp  grayscale_server.cpp  sine_wave_publisher.cpp  sine_wave_subscriber.cpp
sine_wave_package/srv/: ConvertToGrayscale.srv
sine_wave_package/test/: test_sine_wave_publisher.cpp  test_sine_wave_subscriber.cpp
